--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
    "name": "jquery_ui",
-   "version": "1.10.0-pre",
+   "version": "1.10.3",
    "authors": [],
    "license": "MIT",
    "ignore": [
